--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
+    "@types/react-dom": "^18.0.11",
     "nodemon": "^2.0.19"
   }
 }
